syntax = "proto3";

package job.v1beta1;

import "job/v1beta1/entities.proto";

option go_package = "github.com/doogeun/idl/gen/go/job/v1beta1;v1beta1";

service APIService {
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
}

message ListJobsRequest {
  string company_id = 1;
  int32  limit = 2;
  string last_job_id = 3;
}

message ListJobsResponse {
  repeated JobSummary jobs = 1;
}

message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  Job job = 1;
}
